cc_library(
    name = "can",
    srcs = ["huron_odrive_can.cc", "huron_canbus.cc"],
    hdrs = ["ODriveEnums.h", "can_helpers.h", "canbus.h", "huron_odrive_can.h", "huron_canbus.h"],
    deps = [
        "//huron_driver/config:config",
        "//third_party:libsockcanpp"
    ],
    visibility = ["//examples/test_can:__pkg__"]
)
